<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WatchDog</string>
    <string name="txt_input_please">監視したいアプリパッケージ名を入力してください</string>
    <string name="txt_init">「監視開始」を押してください</string>
    <string name="edtxt_pkg_name">jp.co.newphoria.signagedemo1</string>
    <string name="check_box_boot_start">OS起動自動的に監視開始</string>
    <string name="check_box_auto_unlock">自動的にロック解除</string>
    <string name="check_box_notice">通知表示</string>
    <string name="button_01_start_watch">監視開始</string>
    <string name="button_02_stop_watch">監視終了</string>
    <string name="init_log">監視情報</string>
    <string name="frag_02_txt">拡張fragment-2</string>
    <string name="frag_03_txt">拡張fragment-3</string>
    <string name="frag_04_txt">拡張fragment-4</string>

</resources>