<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.co.newphoria.watchdog.MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_text" />

    <Button
        android:id="@+id/button_01_start_watch"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_01_start_watch" />

    <Button
        android:id="@+id/button_02_stop_watch"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_02_stop_watch" />

    <ScrollView
        	android:id="@+id/scroll_log"
            android:layout_width="270dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:background="@drawable/scroll_shape"
            android:scrollbars="none">

        <TextView
            android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:text="@string/init_log" />
    </ScrollView>

</LinearLayout>